--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,12 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v3
+      - run: cd theme && npm ci && npm run build
       - name: Install, build, and upload your site
         uses: withastro/action@v0
+        with:
+          entryPoint: theme
+          target: odyssey-theme
         # with:
             # path: . # The root location of your Astro project inside the repository. (optional)
             # node-version: 16 # The specific version of Node that should be used to build your site. Defaults to 16. (optional)
